@@ -2,7 +2,15 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     NAME              => 'SWISH::Filter',
     VERSION_FROM      => 'lib/SWISH/Filter.pm', # finds $VERSION
-    PREREQ_PM         => {}, # e.g., Module::Name => 1.1
+    PREREQ_PM         => {
+        'Test::More'   => 0,
+        'URI'          => 0,
+        'Getopt::Long' => 0,
+        'Pod::Usage'   => 0,
+        'Data::Dumper' => 0,
+
+
+    }, # e.g., Module::Name => 1.1
 );
 
 #
